# TMS

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .~lock.test_scoring_import.csv#  .~lock.test_teams_schedule_import.csv#  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Notes.md  README.md  TMS.code-workspace  azure-pipelines.yml  azure-steps.yml  cert.pem  dev.http  docker-compose.yml  docker-create-env.sh  docker-create-password.sh  docker-start.sh  generate_release_notes.py  index.html  key.rsa  lerna.json  mkdocs.yml  mysql.sh  notes.md  package-lock.json  package.json  run.sh  run_codegen  run_codegen.bat  rustfmt.toml  sitemap.xml  test_teams_import.csv  test_teams_import_small.csv  (+3 more)
ausfll-score-calculator-main/ausfll-rs/: Cargo.toml
ausfll-score-calculator-main/ausfll-rs/schema-utils/: Cargo.toml
ausfll-score-calculator-main/ausfll-rs/schema-utils/src/: firebase_links.rs
database/: Cargo.toml
database/database-schema/: Cargo.toml
database/database-schema/src/: lib.rs  team.rs
database/schema/: Cargo.toml
database/schema/src/: lib.rs  team.rs  tournament_config.rs
database/scripts/: create_local.sh
database/src/: backup_service.rs  db.rs  lib.rs  table.rs
database/src/broker/: change_operation.rs  mod.rs  table_broker.rs
database/src/db/: backups.rs  collection.rs  db.rs  mod.rs  record.rs  table.rs
echo-tree-infra/: Cargo.toml
echo-tree-infra/echo-tree-infra-schema/: Cargo.toml
echo-tree-infra/echo-tree-infra-schema/src/: lib.rs
echo-tree-rs/: Cargo.toml
echo-tree-rs/src/: lib.rs
echo-tree-rs/src/common/: client.rs  client_access.rs  client_echo.rs
echo-tree-rs/src/core/: mod.rs  tree_manager.rs
echo-tree-rs/src/db/: backup_manager.rs  db.rs  managed_tree.rs  mod.rs  role_manager.rs  tree_map.rs
echo-tree-rs/src/network/filters/: mod.rs
echo-tree-rs/src/network/handlers/: register_handlers.rs  ws_handlers.rs  (+1 more)
echo-tree-rs/src/test/: mod.rs
echo_tree_infra/: Cargo.toml
echo_tree_infra/echo_tree_infra_schema/: Cargo.toml
echo_tree_infra/infra_schema/: Cargo.toml
echo_tree_infra/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: lib.rs  old_launcher.rs  server_manager.rs
launcher/src/gui/: app.rs  launcher.rs  mod.rs  qr_code.rs  runner.rs
launcher/src/logging/: mod.rs
launcher/src/qr_code/: mod.rs
launcher/src/runtime/: mod.rs  rt_gui.rs  rt_headless.rs
network/: Cargo.toml
network/network-schema/: Cargo.toml
network/network-schema/src/: errors.rs  lib.rs
network/src/: lib.rs  network.rs
network/src/clients/: client_access.rs  mod.rs
network/src/filters/: auth_token_filter.rs  mod.rs  register_filter.rs  role_permission_filter.rs  websocket_filter.rs
network/src/handlers/: mod.rs  register_handler.rs  registration_handler.rs  rejection_handler.rs  websocket_handler.rs
server/: .env  .gitignore  Cargo.toml  Notes.md  README.md  analysis_options.yaml  build.rs  cert.pem  comm_receiver.js  comm_service.js  index.html  key.rsa  package-lock.json  package.json  pubspec.yaml  server.js  tsconfig.json
server/.cargo/: config.toml
server/commServer/: commServer.ts
server/fll-games/: Cargo.toml
server/fll-games/src/: firebase_links.rs  lib.rs
server/lib/: channel.dart  commServer.js  commServer.js.map  server.dart
server/my-storage/: default.json
server/mysql/: db.sql  mysql.sh
server/src/: config.rs  lib.rs  main.rs
server/src/Network/: Network.rs  mod.rs
server/src/Requests/: mod.rs
server/src/api/: change_type.rs  client_context.rs  mod.rs  record_changed.rs  role_guard.rs  root_mutation.rs  root_query.rs  root_subscription.rs
server/src/auth/: auth_helpers.rs  auth_interceptors.rs  jwt.rs  mod.rs  permissions.rs
server/src/core/: api.rs  auth.rs  auth_helpers.rs  auth_interceptors.rs  db.rs  events.rs  integrity.rs  mod.rs  permissions.rs  scheduler.rs  shutdown.rs  tms_server.rs  web.rs
server/src/db/: backup_monitor.rs  backup_service.rs  backups.rs  db.rs  item.rs  mod.rs  tree.rs
server/src/event_service/: match_control.rs  mod.rs  scoring.rs  teams.rs
server/src/features/: mod.rs
server/src/modules/: mod.rs
server/src/network/: clients.rs  handler.rs  mdns_broadcaster.rs  mod.rs  network.rs  packets.rs  security.rs  ws.rs
server/src/network_old/: handler.rs  mdns_broadcaster.rs  mod.rs  security.rs
server/src/requests/: mod.rs  teams.rs
server/src/schemas/: answer.rs  event.rs  game_scoresheet.rs  judging_session.rs  match.rs  mod.rs  schema.rs  team.rs  team_game_score.rs  team_scores.rs  user.rs  ws.rs
server/src/services/: mod.rs  services.rs
server/src/temp/: db_example.rs
server/src/web_server/: keys.rs  mod.rs  web_server.rs
server/test/harness/: app.dart
server/tms-attributes/: Cargo.toml
server/tms-macros/: Cargo.toml
server/tms-macros/src/: lib.rs
server/tms-utils/: Cargo.toml
server/tms-utils/src/: lib.rs  security.rs
tms-infra/: Cargo.toml
tms-infra-frb-dynamic/: Cargo.toml
tms-infra-frb-dynamic/src/: frb_generated.rs  lib.rs
tms-infra/infra-schema/: Cargo.toml
tms-infra/infra-schema/src/: lib.rs
tms-infra/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
tms-infra/src/api/: simple.rs
tms-infra/src/infra/: mod.rs
tms-infra/tms-infra-logic/: Cargo.toml
tms-infra/tms-infra-logic/src/: frb_generated.rs
tms-infra/tms-infra-schema/: Cargo.toml
tms-infra/tms-infra-schema/src/: lib.rs
tms-server/: Cargo.toml
tms-server/src/: lib.rs
tms-server/src/database/: backup_service.rs  mod.rs  tree_names.rs
tms-server/src/multicast_dns/: mod.rs
tms-server/src/network/: mod.rs  network.rs
tms-server/src/services/: mod.rs
tms-server/src/types/: mod.rs
tms-server/src/web_server/: certificates.rs  mod.rs  web_server.rs
tms_infra/: Cargo.toml
tms_infra/src/: frb_generated.rs  lib.rs
tms_infra/src/infra/: mod.rs
tms_server/: Cargo.toml
tms_server/src/: lib.rs
tms_server/src/database/: integrity_check_service.rs  mod.rs
tms_server/src/network/: network.rs
tms_server/src/web_server/: certificates.rs  mod.rs  web_server.rs
(+1967 files in other folders)
