[package]
name = "database"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
tokio-stream = "^0.1"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
schemars = "^0.8"
rand = "0.8.5"
warp = { version="^0.3" }
database-schema = { path = "database-schema" }
chrono = "0.4.37"
async-trait = "0.1.79"

[dependencies.echo_tree_rs]
git = "https://github.com/CJBuchel/EchoTree.git"

[build-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
schemars = "^0.8"
database-schema = { path = "database-schema" }
