[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dashmap = "6.1.0"
log = "0.4.26"
once_cell = "1.21.1"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = "1.0.219"
slab = "0.4.9"
sled = "0.34.7"
tokio = "1.44.1"
tokio-stream = "0.1.17"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
