[package]
name = "echo-tree-infra"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-tree-infra-schema = { path = "echo-tree-infra-schema" }

[build-dependencies]
serde_json = "^1.0"
schemars = "^0.8"
echo-tree-infra-schema = { path = "echo-tree-infra-schema" }