[package]
name = "echo-tree-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
schemars = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sled = "^0.34"
warp = { version="^0.3" }
pretty_env_logger = { version = "^0.5", optional = true }
tokio = { version = "^1.36", features = ["full"] }
tokio-stream = "^0.1"
futures = { version = "^0.3", default-features = false }
uuid = { version = "^1.7", features = ["serde", "v4"] }
local-ip-address = "^0.6"
zip = "^0.6"
lazy_static = "^1.4"
bincode = "^1.3"
async-trait = "^0.1"
jsonschema = "^0.17"
rand = "0.8.5"

[dependencies.tms-infra]
path = "../tms-infra"