[package]
name = "echo_tree_infra"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo_tree_infra_schema = { path = "echo_tree_infra_schema" }

[build-dependencies]
serde_json = "^1.0"
schemars = "^0.8"
echo_tree_infra_schema = { path = "echo_tree_infra_schema" }