[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tms_server"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.97"
eframe = "^0.31"
egui = "^0.31"
egui_extras = { version = "^0.31", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["png", "jpeg", "gif"] }
local-ip-address = "0.6.3"
log = "0.4.26"
log4rs = "1.3.0"
parking_lot = "0.12.3"
qrcodegen = "1.8.0"
rfd = "0.15.3"
tokio = { version = "^1.44", features = ["full"] }

[dependencies.server]
path = "../server"
