[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tms_server"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.4"
eframe = { version = "0.33.3", features = ["wayland", "x11"] }
winit = { version = "0.30", features = ["x11"] }

egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["png", "jpeg", "gif"] }
local-ip-address = "0.6.7"
log = "0.4.29"
log4rs = "1.4.0"
parking_lot = "0.12.5"
qrcodegen = "1.8.0"
rfd = "0.16.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }

[dependencies.server]
path = "../server"
