[package]
name = "network"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-schema = { path = "network-schema" }
database = { path = "../database" }
warp = "^0.3"
tokio = { version = "^1.36", features = ["full"] }
rand = "0.8.5"
log = "0.4.21"
async-trait = "0.1.79"
uuid = { version = "^1.7", features = ["serde", "v4"] }