[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
once_cell = "1.21.1"
serde = "1.0.219"
tokio = "1.44.1"

[dependencies.database]
path = "../database"
