[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
axum = "0.8.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
jsonwebtoken = "9.3.1"
log = "0.4.26"
once_cell = "1.21.1"
rand = "0.9.0"
serde = "1.0.219"
tokio = "1.44.1"
tokio-stream = "0.1.17"

[dependencies.database]
path = "../database"