[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
axum = "0.8.7"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dashmap = "6.1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"
once_cell = "1.21.3"
prost = "0.14.1"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.48.0" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-web = "0.14.2"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

[dependencies.database]
path = "../database"

[build-dependencies]
tonic-prost-build = "0.14.2"
