[package]
name = "tms-infra-dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
tms-infra = { path = "../tms-infra" }
flutter_rust_bridge = "=2.3.0"
wasm-bindgen = "0.2.92"