[package]
name = "tms-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Default to cdylib and rlib for most platforms
crate-type = ["cdylib", "rlib"]

# Static library for iOS
[target.'cfg(target_os = "ios")'.lib]
crate-type = ["staticlib"]

# Ensure cdylib for WebAssembly
[target.'cfg(target_family = "wasm")'.lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
wasm-bindgen = "0.2.92"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
schemars = "^0.8"
regex = "^1.10"

# [dependencies.echo-tree-infra]
# path = "../echo-tree-infra"
