[package]
name = "tms-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
tokio-stream = "^0.1"
log = "0.4.21"
local-ip-address = "0.6.1"
log4rs = "1.3.0"
structopt = "0.3.26"
warp = { version = "^0.3", features = ["tls"] }
rcgen = "^0.13"
rand = "0.8.5"
uuid = { version = "^1.7", features = ["serde", "v4"] }
async-trait = "0.1.79"
futures = "0.3.30"
chrono = "^0.4"
mdns-sd = "^0.11"

# Patch rustls for now, there is a flutter bug https://github.com/dart-lang/http/issues/1161 which isn't fixed yet.
# And we need the latest version of rustls in warp to get around it
# tokio-rustls = { version = "0.26.0" }

[dependencies.tms-infra]
path = "../tms-infra"

[dependencies.echo-tree-rs]
# git = "https://github.com/CJBuchel/EchoTree.git"
path = "../echo-tree-rs"
