[package]
name = "tms_infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Default to rlib for most platforms
crate-type = ["rlib", "cdylib", "staticlib"]
# crate-type = ["rlib", "cdylib"] # the pipelines replace "cdylib" with "staticlib" for ios binaries
# when doing local/simulation testing, add ["rlib", "staticlib"] and use the following to build
# cargo lipo --release --targets aarch64-apple-ios x86_64-apple-ios

[dependencies]
flutter_rust_bridge = "=2.6.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
schemars = "^0.8"
regex = "^1.10"
lazy_static = "1.5.0"
chrono = "0.4.38"
strum = "0.26.3"
strum_macros = "0.26.4"