[package]
name = "fll-games"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = []

[lib]
crate-type = ["rlib"]

[dependencies]
paste = "1.0.14"
schemars = "^0.8"
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }