[package]
name = "tms-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fll-games = { path = "../fll-games" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] } # use command: rustup default nightly
tokio = { version = "^1.27", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "^0.1.9"
warp = { version = "^0.3", features = ["tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "0.4.17"
base64 = "0.21.0"
openssl = { version = "0.10.59", features = ["vendored"] }
openssl-sys = "0.9.95"
schemars = "^0.8"