[package]
name = "tms-infra-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
schemars = "^0.8"
# flutter_rust_bridge = "=2.0.0"
# wasm-bindgen = "0.2.92"

[dependencies.echo-tree-infra]
path = "../../echo-tree-infra"
